# Live-Divulgador

./: .dockerignore  .editorconfig  .env.example  .env_example  .gitignore  Dockerfile  LICENSE  README.md  db.py  docker-compose.yml  entry_points.cfg  main.py  requirements.txt  setup.cfg  streamers.csv  tt.py  twitch.py  utils.py
.github/workflows/: ci.yml
docker/: app.Dockerfile  app.Dockerfile.dockerignore  database.Dockerfile  database.Dockerfile.dockerignore  database.dockerfile  db_sample.sql  postgres.dockerfile
docs/: INSTALLATION.md  backup.md  cli.md  database.md  developer.md
live_divulgator/: main.py
live_divulgator/bots/: bases.py  live_divulgator.py
live_divulgator/database/: engine.py
live_divulgator/handlers/: fetch_streamer_ids.py  post_tweet.py  verify_online_streamers.py
live_divulgator/helpers/: slice.py  timeout.py
live_divulgator/plugins/: twitter.py
live_divulgator/service/: streamers_service.py
live_divulgator/twitch/: client.py  handlers.py
live_divulgator/twitter/: client.py  generics.py  message.py
livedivulgador/bots/: bases.py  livedivulgador.py
livedivulgador/handlers/: create_streamer.py  fetch_streamer_ids.py  post_tweet.py  post_tweet_alternative.py  verify_online_streamers.py
livedivulgador/helpers/: slice.py
livedivulgador/plugins/: plugin.py  twitter.py  twitter_alternative.py
livedivulgador/service/: streamers_service.py
livedivulgador/twitch/: categories.py  client.py  exceptions.py  handlers.py  (+1 more)
scripts/: common.sh  container_build.sh  install.sh
test/: test_twitch_client.py
workflows/: ci.yml
(+32 files in other folders)
