[metadata]
name = live-divulgador
author = Hub Tech
description = A bot that promotes Twitch livestreams.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
entry_points = file:entry_points.cfg
install_requires =
  tweepy
  httpx
  SQLAlchemy
  mariadb
  python-dotenv
  pyyaml
  timeloop
  click

setup_requires = setuptools_scm
python_requires = >=3.6
include_package_data = True
packages = find:

[options.extras_require]
dev =
    black
    pytest
    pytest-schema

[black]
max-line-length = 79
